Added short-circuit for BFS

--- a/package.json
+++ b/package.json
@@ -20,5 +20,8 @@
     "gulp": "^3.8.11",
     "gulp-babel": "^5.1.0",
     "gulp-rename": "^1.2.2"
+  },
+  "dependencies": {
+    "symbol": "^0.2.1"
   }
 }
